# AuraScribe

./: .gitignore  Dockerfile  main.py  pyproject.toml  render.yaml  requirements.txt
.agent/workflows/: run-app.md
static/: app.js  index.html  style.css
static/css/: base.css  components.css  patients.css  print.css
static/js/: auth.js  encounters.js  patients.js  scribe.js  utils.js
