[project]
name = "aiscribe"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "authlib>=1.6.9",
    "fastapi>=0.128.4",
    "httpx>=0.28.1",
    "itsdangerous>=2.2.0",
    "openai>=2.17.0",
    "psycopg2-binary>=2.9.11",
    "pydantic-settings>=2.12.0",
    "pyjwt>=2.11.0",
    "python-dotenv>=1.2.1",
    "python-multipart>=0.0.22",
    "uvicorn>=0.40.0",
]
